[tool.poetry]
name = "нова папка"
version = "0.1.0"
description = ""
authors = ["Artemburan <artburia17@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
sqlalchemy = "^2.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
